[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/up_left.png" type="Texture" id=2]
[ext_resource path="res://assets/images/down_right.png" type="Texture" id=3]
[ext_resource path="res://assets/images/up_right.png" type="Texture" id=4]
[ext_resource path="res://assets/images/left.png" type="Texture" id=5]
[ext_resource path="res://assets/images/up.png" type="Texture" id=6]
[ext_resource path="res://assets/images/right.png" type="Texture" id=7]
[ext_resource path="res://assets/images/down_left.png" type="Texture" id=8]
[ext_resource path="res://assets/images/down.png" type="Texture" id=9]
[ext_resource path="res://objects/HUD.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": true,
"name": "directions",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
resource_name = "init"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Message:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 100 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Message:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "show_message"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath("Message:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Message:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 100, 200 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Message:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 10 )

[node name="ScoreBox" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 260.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 120
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreContainer" type="HBoxContainer" parent="ScoreBox"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1060.0
margin_bottom = 140.0

[node name="Score" type="Label" parent="ScoreBox/ScoreContainer"]
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )

[node name="HiScoreContainer" type="HBoxContainer" parent="ScoreBox"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1060.0
margin_bottom = 140.0
alignment = 2

[node name="Hiscore" type="Label" parent="ScoreBox/HiScoreContainer"]
margin_left = 1040.0
margin_right = 1040.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
align = 2

[node name="DirectionContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 320.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Direction" type="AnimatedSprite" parent="DirectionContainer"]
position = Vector2( 540, 220 )
frames = SubResource( 3 )
animation = "directions"
playing = true
offset = Vector2( 0, 25 )

[node name="Message" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 900.0
margin_right = 1080.0
margin_bottom = 1020.0
custom_fonts/font = SubResource( 4 )
text = "Message"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/init = SubResource( 5 )
anims/show_message = SubResource( 6 )
